[package]
name = "gcores_rss"
version = "1.0.1"
authors = ["DevGroup dev@zheteng.cloud"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["full"] }
simple_logger = "^1"
log = "^0.4"
simple-error = "^0"
curl = { version = "^0.4", default_features = false ,features = [ "static-curl", "mesalink" ] }
quick-xml = { version = "^0.22", features = [ "serialize" ] }
rusoto_s3 = {version = "^0.42", default_features = false, features=["rustls"]}
rusoto_core = {version = "^0.42", default_features = false, features=["rustls"]}
warp = "^0.3"
bytes = "^1"
